syntax = "proto3";

package share;

enum ScanErrorCode {
	ScanErrNone = 0;
	ScanErrNetwork = 1;
	ScanErrNotSupport = 2;
	ScanErrSizeOverLimit = 3;
	ScanErrPackage = 4;
	ScanErrDatabase = 5;
	ScanErrTimeout = 6;
	ScanErrInProgress = 7;
	ScanErrRegistryAPI = 8;
	ScanErrFileSystem = 9;
	ScanErrContainerAPI = 10;
	ScanErrXrayAPI = 11;
	ScanErrContainerExit = 12;
	ScanErrAuthentication = 13;
	ScanErrCertificate = 14;
	ScanErrCanceled = 15;
	ScanErrDriverAPINotSupport = 16;
	ScanErrImageNotFound = 17;
	ScanErrAwsDownloadErr = 18;
	ScanErrArgument = 19;
    ScanErrSignatureScanError = 20;
}

enum ScanObjectType {
    CONTAINER = 0;
    HOST = 1;
    IMAGE = 2;
    PLATFORM = 3;
    SERVERLESS = 4;
}

enum ScanProvider {
    Neuvector = 0;
    JFrogXray = 1;
}

enum ScanVulStatus {
    Unpatched = 0;
    FixExists = 1;
    WillNotFix = 2;
    Unaffected = 3;
}

message  ScanTypeMap {
  bool Vulnerability = 1;
  bool Signature = 2;
}

message ScanVulnerability {
    string Name = 1;
    float Score = 2;
    string Severity = 3;
    string Description = 4;
    string PackageNameDeprecated = 5; // Keep this for backward compatibility. Return filename for app vulnerabilities.
    string PackageVersion = 6;
    string FixedVersion = 7;
    string Link = 8;
    string Vectors = 9;
    float ScoreV3 = 10;
    string VectorsV3 = 11;
    string PublishedDate = 12;
    string LastModifiedDate = 13;
    repeated string CPEs = 14;
    repeated string CVEs = 15;
    string FeedRating = 16;
    bool InBase = 17;
    string DBKey = 18;
    string FileName = 19;
    string PackageName = 20;
}

message ScanLayerResult {
    string Digest = 1;
    repeated ScanVulnerability Vuls = 2;
    string Cmds = 3;
    int64 Size = 4;
    ScanSecretResult Secrets = 5;
}

message ScanModule  {
    string Name = 1;
    string Version = 2;
    string Source = 3;
    repeated ScanModuleVul Vuls = 4;
    repeated string CPEs = 5;
    string File = 6;
}

message ScanModuleVul  {
    string Name = 1;
    ScanVulStatus Status = 2;
}

message ScanSecretLog {
	string Type = 1;
	string Text = 2;
	string File = 3;
	string RuleDesc = 4;
	string Suggestion = 5;
}

message ScanSecretResult {
    ScanErrorCode Error = 1;
    repeated ScanSecretLog Logs = 2;
}

message ScanSetIdPermLog {
	string Type = 1;
	string File = 2;
	string Evidence = 3;
}

message ScanResult {
    string Version = 1;
    ScanErrorCode Error = 2;
    string Namespace = 3;
    repeated ScanVulnerability Vuls = 4;
    string ContainerID = 5;
    string HostID = 6;
    string Registry = 7;
    string Repository = 8;
    string Tag = 9;
    string Digest = 10;
    string ImageID = 11;
    repeated ScanLayerResult Layers = 12;
	repeated string Envs = 13;
  	map<string,string> Labels = 14;
    string Platform = 15;
    string PlatformVersion = 16;
    string Author = 17;
    string CVEDBCreateTime = 18;
    repeated ScanModule Modules = 19;
    ScanSecretResult Secrets = 20;
    repeated string Cmds = 21;
    repeated ScanSetIdPermLog SetIdPerms = 22;
    ScanProvider Provider = 23;
    int64 Size = 24;
    ScanSignatureInfo SignatureInfo = 25;
    string Created = 26;
    ScanTypeMap ScanTypesRequested = 27;
}

message ScanSignatureInfo {
    repeated string Verifiers = 1;
    string VerificationTimestamp = 2;
    ScanErrorCode VerificationError = 3;
}

message ScanRunningRequest {
    ScanObjectType Type = 1;
    string ID = 2;
    string AgentID = 3;
    string AgentRPCEndPoint = 4;
}

message ScanData {
    ScanErrorCode Error = 1;
    bytes Buffer = 2;
}

message ScanAppPackage {
    string AppName = 1;
    string ModuleName = 2;
    string Version = 3;
    string FileName = 4;
}

message ScanAppRequest {
    repeated ScanAppPackage Packages = 1;
}

message ScanAwsLambdaRequest {
    string ResType = 1;
    string FuncName = 2;
    string Region = 3;
    string FuncLink = 4;
    bool ScanSecrets = 5;
}

message ScannerSettings {
    bool EnableTLSVerification = 1;
    string CACerts = 2;
    string httpProxy = 3;
    string httpsProxy = 4;
    string noProxy = 5;
}
